--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="page">
     <nav>
 
-      <a id="Logo" href="#"><img src="./assets/logo.svg" alt="Rocket.sect logo"></a>
+      <a href="#"><img src="./assets/logo.svg" alt="Rocket.sect logo"></a>
 
         <ul>
           <li><a href="#">Início</a></li>
